[package]
name = "lexer"
version = "0.1.0"
authors = ["Marc Baltes <mb800915@ohio.edu>, Jonathan Feige <jf786915@ohio.edu>"]
license = "MIT"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false

[dependencies]
regex = "1"
